--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -1,3 +1,14 @@
+.btn {
+    &--cancel {
+        border: 1px solid #ccc;
+        border-radius: 99px;
+    }
+
+    &--save {
+        border-radius: 99px;
+    }
+}
+
 .btn-large,
 .btn-small {
     display: flex;
