--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -13,3 +13,6 @@
 @forward "./subscribe";
 @forward "./modal";
 @forward "./form";
+@forward "./auth";
+@forward "./messages";
+@forward "./payment";
