--- a/templates/header-login.html
+++ b/templates/header-login.html
@@ -18,18 +18,18 @@
                 </button>
             </form>
             <div class="header-top__wrap">
-                <a href="#!">
+                <a href="./profile.html">
                     <img
-                        src="./assets/icons/user.svg"
+                        src="./assets/img/fashion/feedback/feedback-avt12.jpg"
                         alt=""
-                        class="header-top__user"
+                        class="header-top__user header-top__user--login"
                     />
                 </a>
                 <a href="./with-list-login.html" class="header-top__box">
                     <img src="./assets/icons/heart-white.svg" alt="" />
                     <p class="header-top__num section-desc-2">(3)</p>
                 </a>
-                <a href="#!" class="header-top__box">
+                <a href="./cart-login.html" class="header-top__box">
                     <img src="./assets/icons/cart.svg" alt="" />
                     <p class="header-top__num section-desc-2">(0)</p>
                 </a>
@@ -46,7 +46,7 @@
         <nav class="navbar d-lg-none">
             <ul class="navbar__list">
                 <li class="navbar__item">
-                    <a href="./" class="navbar__link">Home</a>
+                    <a href="./index-login.html" class="navbar__link">Home</a>
                 </li>
                 <li class="navbar__item">
                     <a href="#!" class="navbar__link">
@@ -61,28 +61,28 @@
                         <li class="navbar-dropDown__item"></li>
                         <li class="navbar-dropDown__item">
                             <a
-                                href="./product-men.html"
+                                href="./product-men-login.html"
                                 class="navbar-dropDown__link"
                                 >Men Fashion</a
                             >
                         </li>
                         <li class="navbar-dropDown__item">
                             <a
-                                href="./product-women.html"
+                                href="./product-women-login.html"
                                 class="navbar-dropDown__link"
                                 >Women Fashion</a
                             >
                         </li>
                         <li class="navbar-dropDown__item">
                             <a
-                                href="./product-kids.html"
+                                href="./product-kids-login.html"
                                 class="navbar-dropDown__link"
                                 >Kids Fashion</a
                             >
                         </li>
                         <li class="navbar-dropDown__item">
                             <a
-                                href="./product-baby.html"
+                                href="./product-baby-login.html"
                                 class="navbar-dropDown__link"
                                 >Baby Fashion</a
                             >
@@ -90,16 +90,18 @@
                     </ul>
                 </li>
                 <li class="navbar__item">
-                    <a href="./about.html" class="navbar__link">About</a>
+                    <a href="./about-login.html" class="navbar__link">About</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="./blog.html" class="navbar__link">Blog</a>
+                    <a href="./blog-login.html" class="navbar__link">Blog</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="./contact.html" class="navbar__link">Contact</a>
+                    <a href="./contact-login.html" class="navbar__link"
+                        >Contact</a
+                    >
                 </li>
                 <li class="navbar__item">
-                    <a href="./faq.html" class="navbar__link">FAQ</a>
+                    <a href="./faq-login.html" class="navbar__link">FAQ</a>
                 </li>
             </ul>
         </nav>
@@ -124,7 +126,7 @@
         </a>
         <ul class="navbar__list">
             <li class="navbar__item">
-                <a href="./" class="navbar__link">Home</a>
+                <a href="./index-login.html" class="navbar__link">Home</a>
             </li>
             <li class="navbar__item">
                 <a href="#!" class="navbar__link">
@@ -139,28 +141,28 @@
                     <li class="navbar-dropDown__item"></li>
                     <li class="navbar-dropDown__item">
                         <a
-                            href="./product-men.html"
+                            href="./product-men-login.html"
                             class="navbar-dropDown__link"
                             >Men Fashion</a
                         >
                     </li>
                     <li class="navbar-dropDown__item">
                         <a
-                            href="./product-women.html"
+                            href="./product-women-login.html"
                             class="navbar-dropDown__link"
                             >Women Fashion</a
                         >
                     </li>
                     <li class="navbar-dropDown__item">
                         <a
-                            href="./product-kids.html"
+                            href="./product-kids-login.html"
                             class="navbar-dropDown__link"
                             >Kids Fashion</a
                         >
                     </li>
                     <li class="navbar-dropDown__item">
                         <a
-                            href="./product-baby.html"
+                            href="./product-baby-login.html"
                             class="navbar-dropDown__link"
                             >Baby Fashion</a
                         >
@@ -168,16 +170,16 @@
                 </ul>
             </li>
             <li class="navbar__item">
-                <a href="./about.html" class="navbar__link">About</a>
+                <a href="./about-login.html" class="navbar__link">About</a>
             </li>
             <li class="navbar__item">
-                <a href="./blog.html" class="navbar__link">Blog</a>
+                <a href="./blog-login.html" class="navbar__link">Blog</a>
             </li>
             <li class="navbar__item">
-                <a href="./contact.html" class="navbar__link">Contact</a>
+                <a href="./contact-login.html" class="navbar__link">Contact</a>
             </li>
             <li class="navbar__item">
-                <a href="./faq.html" class="navbar__link">FAQ</a>
+                <a href="./faq-login.html" class="navbar__link">FAQ</a>
             </li>
         </ul>
     </div>
