--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -8,6 +8,24 @@ $error-color: #ed4337;
         pointer-events: none;
     }
 
+    &__row {
+        display: flex;
+        gap: 30px;
+
+        @include abstracts.screen(md) {
+            gap: 20px;
+        }
+
+        @include abstracts.screen(sm) {
+            flex-direction: column;
+            gap: 0;
+        }
+
+        > * {
+            flex: 1;
+        }
+    }
+
     &__group {
         margin-top: 30px;
 
@@ -18,19 +36,13 @@ $error-color: #ed4337;
         &--inline {
             display: flex;
             align-items: center;
-            justify-content: space-between;
-
-            @include abstracts.screen(sm) {
-                flex-direction: column;
-                align-items: flex-start;
-                gap: 12px;
-            }
         }
     }
 
     &__group:has(:invalid):has(&__input:not(:placeholder-shown)) {
         .form__text-input {
             border-color: $error-color;
+            background: rgba($color: $error-color, $alpha: 0.1);
         }
 
         .form__error,
@@ -43,21 +55,43 @@ $error-color: #ed4337;
         }
     }
 
+    &__text-area,
     &__text-input {
-        position: relative;
-        height: 46px;
-
         display: flex;
         align-items: center;
-        padding: 0 12px 13px 0;
-        border-bottom: 1px solid var(--Shapes-Color-Grey);
+        padding: 0 12px;
+        border-radius: 10px;
+        border: 1px solid #d2d1d6;
 
         &:focus-within {
             border-color: var(--Shapes-Color-Green);
         }
     }
 
-    &__input {
+    &__text-area {
+        height: 100px;
+        padding: 12px;
+
+        &-input {
+            resize: none;
+        }
+    }
+
+    &__text-input {
+        position: relative;
+        height: 46px;
+
+        &--small {
+            height: 42px;
+        }
+
+        @include abstracts.screen(md) {
+            height: 48px;
+        }
+    }
+
+    &__input,
+    &__text-area-input {
         flex: 1;
         width: 100%;
         height: 100%;
@@ -66,12 +100,137 @@ $error-color: #ed4337;
         line-height: 1.44;
 
         &::placeholder {
-            color: var(--form-placeholder-color);
+            color: var(--Text-Color-Dark);
         }
 
         &-icon {
             margin-left: 12px;
         }
+
+        @include abstracts.screen(md) {
+            font-size: 1.6rem;
+        }
+    }
+
+    &__select-dialog {
+        position: absolute;
+        bottom: 44px;
+        left: 10px;
+        z-index: 1;
+
+        display: flex;
+        flex-direction: column;
+
+        opacity: 0;
+        visibility: hidden;
+        translate: 0 8px;
+        transition: opacity, visibility, translate;
+        transition-duration: 0.2s;
+
+        min-width: 230px;
+        max-height: 310px;
+        padding-bottom: 10px;
+        border: 1px solid #d2d1d6;
+        border-radius: 10px;
+        box-shadow: 0 0 5px var(--Shapes-Color-Green2);
+        background: var(--Shapes-Color-Green2);
+
+        @include abstracts.screen(sm) {
+            position: fixed;
+            max-height: initial;
+            max-width: initial;
+            inset: 0;
+            border-radius: 0;
+        }
+
+        &.show {
+            opacity: 1;
+            visibility: visible;
+            translate: 0;
+        }
+    }
+
+    &__search {
+        display: flex;
+        align-items: center;
+        flex-shrink: 0;
+
+        height: 38px;
+        padding: 0 20px;
+        border-bottom: 1px solid #d2d1d6;
+
+        @include abstracts.screen(lg) {
+            height: 48px;
+        }
+
+        @include abstracts.screen(sm) {
+            padding: 0 14px;
+            margin: 10px 30px 0;
+            border: 1px solid #d2d1d6;
+            border-radius: 10px;
+        }
+
+        &-input {
+            flex: 1;
+            height: 100%;
+            font-size: 1.6rem;
+        }
+
+        &-icon {
+            width: 16px;
+            margin-left: 10px;
+
+            @include abstracts.screen(lg) {
+                width: 20px;
+            }
+        }
+    }
+
+    &__option-list {
+        flex: 1;
+        margin-top: 10px;
+        overflow-y: auto;
+        overscroll-behavior: contain;
+
+        @supports (-webkit-touch-callout: none) {
+            padding-bottom: 300px;
+        }
+    }
+
+    &__option {
+        padding: 8px 20px;
+        font-size: 1.4rem;
+
+        @include abstracts.screen(lg) {
+            padding: 18px 30px;
+            font-size: 1.6rem;
+        }
+
+        &--current {
+            font-weight: 500;
+            background: rgba($color: var(--Shapes-Color-Green2), $alpha: 0.7);
+        }
+
+        &:not(&--current):hover {
+            background: var(--Shapes-Color-Green2);
+            cursor: pointer;
+        }
+    }
+
+    &__dialog-heading {
+        padding: 20px;
+        font-style: 1.8rem;
+        font-weight: 600;
+        text-align: center;
+    }
+
+    &__close-dialog {
+        position: absolute;
+        right: 0;
+        top: 0;
+        padding: 12px 18px;
+        opacity: 0.8;
+        font-size: 3rem;
     }
 
     &__error {
@@ -88,6 +247,10 @@ $error-color: #ed4337;
         display: none;
         margin-left: 12px;
         animation: shake 0.5s;
+    }
+
+    &__pull-right {
+        margin-left: auto;
     }
 
     &__checkbox {
@@ -110,7 +273,7 @@ $error-color: #ed4337;
         }
 
         &::after {
-            top: 8px;
+            top: 5px;
             left: 3px;
             width: 13px;
             height: 6px;
@@ -122,10 +285,100 @@ $error-color: #ed4337;
 
         &-label {
             margin-left: 29px;
+            font-size: 1.5rem;
+            font-weight: 500;
+            line-height: 1.46;
+            color: #9e9da8;
 
             @include abstracts.screen(md) {
                 font-size: 1.4rem;
             }
+        }
+    }
+
+    &__label {
+        display: block;
+        font-size: 2.2rem;
+        font-weight: 500;
+        line-height: 1.45;
+
+        &--medium {
+            margin-bottom: 20px;
+            font-size: 1.8rem;
+            line-height: 1.44;
+        }
+
+        &--small {
+            margin-bottom: 10px;
+            font-size: 1.4rem;
+            line-height: 1.42;
+
+            @include abstracts.screen(xl) {
+                width: 100%;
+            }
+        }
+    }
+
+    &__select-wrap {
+        height: 45px;
+        display: flex;
+        align-items: center;
+        border-radius: 6px;
+        border: 1px solid #d2d1d6;
+    }
+
+    &__select {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        min-width: var(--width, 108px);
+        height: calc(100% - 10px);
+        padding: 0 14px;
+
+        font-size: 1.4rem;
+        font-weight: 500;
+        line-height: 1.42;
+        cursor: pointer;
+
+        @include abstracts.screen(xl) {
+            flex: 1;
+        }
+
+        &-separate {
+            width: 1px;
+            height: 80%;
+            background: #9e9da8;
+        }
+    }
+
+    &__select + &__select {
+        border-left: 1px solid #d2d1d6;
+    }
+
+    &__tags {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px 20px;
+
+        @include abstracts.screen(sm) {
+            gap: 10px;
+        }
+    }
+
+    &__tag {
+        padding: 6px 12px;
+        border-radius: 6px;
+        color: #9e9da8;
+        background: var(--form-tag-bg-color);
+
+        font-size: 1.4rem;
+        font-weight: 500;
+        line-height: 1.42;
+
+        transition: color 0.25s;
+
+        &:hover {
+            color: var(--text-color);
         }
     }
 
@@ -139,52 +392,4 @@ $error-color: #ed4337;
             display: block;
         }
     }
-
-    &__submit-btn {
-        width: 100%;
-    }
-
-    &__text {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        &::before,
-        &::after {
-            content: "";
-            width: 174px;
-            height: 1px;
-            background: var(--Shapes-Color-Grey);
-        }
-
-        &::before {
-            margin-right: 20px;
-        }
-
-        &::after {
-            margin-left: 20px;
-        }
-    }
-
-    &__socials {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-top: 16px;
-    }
-}
-
-.form-social {
-    width: 255px;
-    height: 50px;
-    border: 1px solid var(--Text-Color-Light);
-
-    display: flex;
-    align-items: center;
-    gap: 13px;
-    padding: 13px;
-}
-
-.form-social + .form-social {
-    margin-top: 16px;
 }
