--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -74,7 +74,7 @@
         z-index: 1;
 
         width: min(var(--content-width, 800px), 100% - 40px);
-        padding: 30px 10px 30px 30px;
+        padding: 30px;
         border-radius: 20px;
         background: #fff;
         box-shadow: 0px 20px 60px 10px var(--dialog-shadow-color);
@@ -138,6 +138,13 @@
     &__text {
         font-size: 1.8rem;
         line-height: 1.5;
+
+        &--success {
+            margin-top: 12px;
+            text-align: center;
+            font-size: 2.8rem;
+            font-weight: 700;
+        }
     }
 
     &__bottom {
@@ -174,6 +181,19 @@
         &--cancel {
             background: transparent;
             border: 1px solid #d2d1d6;
+        }
+
+        &--view {
+            width: 100%;
+            background: #52be4f;
+            color: var(--Text-Color-White);
+        }
+
+        &--back {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
         }
     }
 
@@ -250,6 +270,13 @@
         border-radius: 99px;
 
         font-size: 1.7rem;
+
+        &--success {
+            margin-top: 20px;
+            display: flex;
+            align-items: center;
+            gap: 30px;
+        }
     }
 }
 
@@ -274,6 +301,12 @@
             align-items: center;
             padding-bottom: 18px;
             border-bottom: 1px solid var(--Shapes-Color-Grey);
+
+            @include abstracts.screen(sm) {
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 15px;
+            }
         }
     }
 
@@ -282,6 +315,18 @@
 
         &--cart {
             margin-right: 166px;
+
+            @include abstracts.screen(xxl) {
+                margin-right: 95px;
+            }
+
+            @include abstracts.screen(xl) {
+                margin-right: 20px;
+            }
+
+            @include abstracts.screen(lg) {
+                margin-right: auto;
+            }
         }
     }
 
@@ -289,6 +334,10 @@
         display: flex;
         align-items: center;
         gap: 30px;
+
+        @include abstracts.screen(sm) {
+            align-items: flex-start;
+        }
     }
 
     &__btn {
@@ -366,4 +415,8 @@
 
 .modal-container + .modal-container {
     margin-top: 22px;
+
+    @include abstracts.screen(lg) {
+        margin-top: 36px;
+    }
 }
