--- a/scss/pages/_blog.scss
+++ b/scss/pages/_blog.scss
@@ -26,11 +26,31 @@
 
     &__title {
         width: 35%;
+
+        @include abstracts.screen(md) {
+            width: 50%;
+        }
+
+        @include abstracts.screen(sm) {
+            width: 100%;
+        }
     }
 
     &__desc {
         width: 41%;
         margin-top: 18px;
+
+        @include abstracts.screen(lg) {
+            width: 58%;
+        }
+
+        @include abstracts.screen(md) {
+            width: 82%;
+        }
+
+        @include abstracts.screen(sm) {
+            width: 100%;
+        }
     }
 }
 
@@ -50,6 +70,10 @@
             color: var(--Text-Color-Light, #566363);
             line-height: 1.75;
         }
+
+        @include abstracts.screen(sm) {
+            width: 217px;
+        }
     }
 }
 
@@ -61,6 +85,12 @@
         &:hover {
             scale: 0.9;
         }
+
+        &--small {
+            @include abstracts.screen(lg) {
+                margin-top: 150px;
+            }
+        }
     }
 
     &__img {
@@ -69,6 +99,9 @@
 
         &--large {
             height: 570px;
+            @include abstracts.screen(lg) {
+                height: 100%;
+            }
         }
 
         &--medium {
@@ -77,6 +110,10 @@
 
         &--small {
             height: 270px;
+
+            @include abstracts.screen(lg) {
+                height: 100%;
+            }
         }
     }
 
