--- a/scss/pages/_cart.scss
+++ b/scss/pages/_cart.scss
@@ -7,10 +7,18 @@
 
 .cart {
     padding: 100px 0 150px;
+
+    @include abstracts.screen(lg) {
+        padding: 70px 0 100px;
+    }
 }
 
 .cart-sum {
     margin-left: 130px;
+
+    @include abstracts.screen(lg) {
+        margin-left: 0;
+    }
 
     &__title {
         padding-bottom: 18px;
